<resources>
    <string name="app_name">AndroidPolarisPI</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Iniciar sesión</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Correo Electronico</string>
    <string name="datosP">Por favor ingrese sus datos</string>
    <string name="prompt_password">Contraeña </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="iniciar">INICIAR SESION </string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions.


    </string>
</resources>
