<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Login progress -->


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar">

    </include>

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

<TextView
    android:layout_width="wrap_content"
    android:text="@string/iniciar"
    android:layout_height="wrap_content"
    android:textSize="30dp"
    android:textStyle="bold"

    />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:text="@string/datosP"

                />

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                     />



                <EditText
                    android:id="@+id/password"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:inputType="textPassword"
                    android:maxLines="1"

                     />



            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />



        </LinearLayout>
</RelativeLayout>